:sparkles: feat: criar rotas de cursos e avaliações e consumir no frontend
